Added version int

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.datasource.password=adminuser
 
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
+version: 0.0.1-int
