--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,5 @@ spring.datasource.password=adminuser
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 version: 0.0.1-int
+version2: 0.0.2-int
 
